--- a/playbooks/roles/mindx.harbor.push/defaults/main.yml
+++ b/playbooks/roles/mindx.harbor.push/defaults/main.yml
@@ -2,3 +2,4 @@
 resource_dir: "~/resources"
 PROJECT_NAME: "mindx"
 k8s_namespace: "{{K8S_NAMESPACE}}"
+prefabricated: "{{ 1 if images_dir == 'mindx-inner-images' else 2 }}"
