--- a/playbooks/roles/mindx.harbor.push/tasks/push.yml
+++ b/playbooks/roles/mindx.harbor.push/tasks/push.yml
@@ -4,8 +4,8 @@
 
 - name: analyze image
   set_fact:
-    manifest_name: '{{ (line.split(":")[1:] | join(":") | trim).split("_")[0] }}'
-    arch: '{{ ((line.split(":")[1:] | join(":") | trim).split("_")[-1]).split(":")[0] }}'
+    manifest_name: '{{ (line.split(":")[1] | trim).split("_")[:-1] | join("_") }}'
+    arch: '{{ ((line.split(":")[1] | trim).split("_")[-1]) }}'
     orig_name: '{{line.split(":")[1:] | join(":") | trim }}'
     tag: '{{ line.split(":")[-1] | trim }}'
   with_items: "{{ load_result.stdout_lines }}"
@@ -35,12 +35,12 @@
     HTTP_PROXY: ""
     HTTPS_PROXY: ""
   register: mysql_pod
-  when: images_dir == "mindx-images"
+  when: "'mindx' in images_dir"
 
 - name: query image size
   shell: docker image ls | awk '$1 ~ /^{{ manifest_name | replace("/", "\/") }}_{{arch}}$/ && $2 ~ /^{{tag}}$/ {print $NF}'
   register: image_size
-  when: images_dir == "mindx-images"
+  when: "'mindx' in images_dir"
 
 - name: insert image info to mysql
   shell: |
@@ -50,10 +50,10 @@
     INSERT IGNORE INTO image_configs(image_name, image_tag, image_size, harbor_path, prefabricated, create_time) \
     VALUES('{{manifest_name.split('/')[-1]}}', '{{tag}}', \
     {{ (image_size.stdout | replace(image_size.stdout[-2:], '') | float) * ((1024 if 'GB' in image_size.stdout else 1) | float) }}, \
-    '{{HARBOR_IP}}:{{HARBOR_HTTPS_PORT}}/{{manifest_name}}:{{tag}}', 1, NOW());"
+    '{{HARBOR_IP}}:{{HARBOR_HTTPS_PORT}}/{{manifest_name}}:{{tag}}', {{prefabricated}}, NOW());"
   environment:
     http_proxy: ""
     https_proxy: ""
     HTTP_PROXY: ""
     HTTPS_PROXY: ""
-  when: images_dir == "mindx-images"
+  when: "'mindx' in images_dir"
