--- a/playbooks/06.nfs.yaml
+++ b/playbooks/06.nfs.yaml
@@ -5,8 +5,10 @@
     - worker
   roles:
     - role: mindx.nfs.client
+      when: STORAGE_TYPE == "NFS"
 
 # config nfs server
 - hosts: nfs_server
   roles:
     - role: mindx.nfs.server
+      when: STORAGE_TYPE == "NFS"
