--- a/playbooks/13.mindxdl.yaml
+++ b/playbooks/13.mindxdl.yaml
@@ -6,8 +6,8 @@
   tasks:
   - name: set HARBOR_IP
     include_tasks: task_set_harbor_ip.yaml
-  - name: set NFS_IP
-    include_tasks: task_set_nfs_ip.yaml
+  - name: set STORAGE_INFO
+    include_tasks: task_set_storage_info.yaml
 
 # install dl
 - hosts: master
