--- a/playbooks/roles/mindx.harbor.push/defaults/main.yml
+++ b/playbooks/roles/mindx.harbor.push/defaults/main.yml
@@ -3,3 +3,5 @@ resource_dir: "~/resources"
 PROJECT_NAME: "mindx"
 k8s_namespace: "{{K8S_NAMESPACE}}"
 prefabricated: "{{ 1 if images_dir == 'mindx-inner-images' else 2 }}"
+harbor_path: "{{ manifest_name if images_dir == 'mindx-inner-images' else orig_name.split(':')[0] }}"
+image_arch: "{{ 'noarch' if images_dir == 'mindx-inner-images' else arch }}"
