--- a/playbooks/roles/mindx.mysql/templates/mysql-deployment.yaml
+++ b/playbooks/roles/mindx.mysql/templates/mysql-deployment.yaml
@@ -28,6 +28,7 @@ spec:
                   key: root_pwd
           ports:
             - containerPort: 3306
+              hostPort: 30306
               name: mysql
           volumeMounts:
             - name: mysql-persistent-storage
@@ -65,19 +66,3 @@ spec:
       port: 3306
   selector:
     app: mysql
-
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: mysql-nodeport
-  namespace: {{ k8s_namespace }}
-spec:
-  ports:
-    - name: mysql-nodeport
-      targetPort: 3306
-      port: 3306
-      nodePort: 30306
-  selector:
-    app: mysql
-  type: NodePort
