不copy rootCA.key 到 /etc/mindx-dl/cluster-manager目录，basic和mysql去掉基础组件部分

--- a/playbooks/roles/mindx.basic/tasks/main.yml
+++ b/playbooks/roles/mindx.basic/tasks/main.yml
@@ -1,106 +1,5 @@
-- name: create group {{ DL_GRP }}
-  ansible.builtin.group:
-    name: "{{ DL_GRP }}"
-    state: present
-    gid: "{{ DL_GID }}"
-  ignore_errors: true
-
-- name: create user {{ DL_USR }}
-  ansible.builtin.user:
-    name: "{{ DL_USR }}"
-    comment: "{{  DL_USR }}"
-    uid: "{{ DL_UID }}"
-    group: "{{ DL_GRP }}"
-    state: present
-  ignore_errors: true
-
-- name: create /etc/mindx-dl
-  file:
-    path: "{{ item }}"
-    state: directory
-    owner: "{{DL_USR}}"
-    group: "{{DL_GRP}}"
-    mode: 0700
-  ignore_errors: true
-  loop:
-    - /etc/mindx-dl
-    - /etc/mindx-dl/edge-manager
-    - /etc/mindx-dl/data-manager
-
-- name: check ssh_host_ed25519_key
-  stat:
-    path: /etc/mindx-dl/data-manager/ssh_host_ed25519_key
-  register: stat_ed25519_key
-
-- name: check ssh_host_rsa_key
-  stat:
-    path: /etc/mindx-dl/data-manager/ssh_host_rsa_key
-  register: stat_rsa_key
-
-- name: ssh-keygen data-manager ssh_host_key
-  shell: |
-    ssh-keygen -t ed25519 -f ssh_host_ed25519_key -N ""
-    ssh-keygen -t rsa -b 4096 -f ssh_host_rsa_key -N ""
-  args:
-    chdir: /etc/mindx-dl/data-manager
-  when: not stat_ed25519_key.stat.exists and not stat_rsa_key.stat.exists
-
-- name: chmod ssh_host_key
-  file:
-    path: "{{ item }}"
-    state: touch
-    owner: "{{DL_USR}}"
-    group: "{{DL_GRP}}"
-    mode: 0400
-  loop:
-    - /etc/mindx-dl/data-manager/ssh_host_ed25519_key
-    - /etc/mindx-dl/data-manager/ssh_host_rsa_key
-
-- name: absent ssh_host_key.pub
-  file:
-    path: "{{ item }}"
-    state: absent
-  loop:
-    - /etc/mindx-dl/data-manager/ssh_host_ed25519_key.pub
-    - /etc/mindx-dl/data-manager/ssh_host_rsa_key.pub
-
-- name: create log directories for "{{DL_USR}}"
-  file:
-    path: "{{ item }}"
-    state: directory
-    owner: "{{DL_USR}}"
-    group: "{{DL_GRP}}"
-    mode: 0750
-  loop:
-    - /var/log/mindx-dl
-    - /var/log/mindx-dl/apigw
-    - /var/log/mindx-dl/access-manager
-    - /var/log/mindx-dl/cluster-manager
-    - /var/log/mindx-dl/data-manager
-    - /var/log/mindx-dl/dataset-manager
-    - /var/log/mindx-dl/label-manager
-    - /var/log/mindx-dl/edge-manager
-    - /var/log/mindx-dl/hccl-controller
-    - /var/log/mindx-dl/model-manager
-    - /var/log/mindx-dl/noded
-    - /var/log/mindx-dl/task-manager
-    - /var/log/mindx-dl/train-manager
-    - /var/log/mindx-dl/user-manager
-    - /var/log/mindx-dl/volcano-controller
-    - /var/log/mindx-dl/volcano-scheduler
-
-- name: create log directories for root
-  file:
-    path: "{{ item }}"
-    state: directory
-    owner: root
-    group: root
-    mode: 0750
-  loop:
-    - /var/log/mindx-dl/image-manager
-    - /var/log/mindx-dl/devicePlugin
-    - /var/log/mindx-dl/npu-exporter
-    - /var/log/mindx-dl/license-manager
+- include_tasks: master_basic.yml
+  when: ansible_connection == "local"
 
 - name: delete old hostname in /etc/hosts
   lineinfile:
@@ -118,12 +17,3 @@
     dest: /etc/hosts
     line: "127.0.1.1 {{ set_hostname }}"
   when: set_hostname is defined
-
-- name: install haveged
-  shell: dpkg --force-all -i {{ haveged_dir }}/*.deb
-  environment:
-    DEBIAN_FRONTEND: noninteractive
-    DEBIAN_PRIORITY: critical
-  when:
-    - OS_ID == 'ubuntu'
-    - OS_VERSION_ID == '18.04'
