--- a/playbooks/roles/mindx.basic/defaults/main.yml
+++ b/playbooks/roles/mindx.basic/defaults/main.yml
@@ -1,5 +1,4 @@
-# defaults file for ascend.mysql
-state: "present"
+# defaults file for mindx.basic
 DL_USR: "{{ MINDX_USER }}"
 DL_GRP: "{{ MINDX_GROUP }}"
 DL_UID: "{{ MINDX_USER_ID }}"
