--- a/playbooks/roles/mindx.kubeedge/defaults/main.yml
+++ b/playbooks/roles/mindx.kubeedge/defaults/main.yml
@@ -1,5 +1,4 @@
-# defaults file for ascend.docker
-state: 'present'
+# defaults file for mindx.kubeedge
 resource_dir: "~/resources"
 MASTER_IP: "{{ ansible_default_ipv4.address }}"
 
