--- a/playbooks/roles/mindx.k8s.cephfspv/defaults/main.yml
+++ b/playbooks/roles/mindx.k8s.cephfspv/defaults/main.yml
@@ -1,2 +1,6 @@
 # defaults file for minx.k8s.cephfspv
 CEPHFS_YAML_DIR: "~/deploy_yamls/cephfs"
+
+DL_CAP: "{{ STORAGE_CAPACITY }}"
+
+DL_PATH: "{{ STORAGE_PATH }}"
