--- a/playbooks/roles/mindx.mysql/defaults/main.yml
+++ b/playbooks/roles/mindx.mysql/defaults/main.yml
@@ -1,11 +1,12 @@
-# defaults file for ascend.mysql
+# defaults file for mindx.mysql
 resource_dir: "~/resources"
 OS_ID: "{{ lookup('ini', 'ID type=properties section=global file=/etc/os-release') }}"
 OS_VERSION_ID: "{{ lookup('ini', 'VERSION_ID type=properties section=global file=/etc/os-release') | replace('\"', '') }}"
 
 image_dir: "{{resource_dir}}/images/{{ansible_architecture}}"
-capacity: 20Gi
-data_path: "{{MYSQL_DATAPATH}}"
 k8s_namespace: "{{K8S_NAMESPACE}}"
 pwd: "{{MYSQL_PASSWORD}}"
 MYSQL_YAML_DIR: "~/deploy_yamls/mysql"
+HARBOR_URL: "{{HARBOR_IP}}:{{HARBOR_HTTPS_PORT}}/"
+REPO_URL: "{{ HARBOR_URL if HARBOR_IP != '' else '' }}"
+ARCH: "{{ 'amd64' if ansible_architecture == 'x86_64' else 'arm64' }}"
