--- a/playbooks/roles/mindx.mysql/tasks/main.yml
+++ b/playbooks/roles/mindx.mysql/tasks/main.yml
@@ -4,21 +4,9 @@
 
 - name: message
   debug:
-    msg: "There can only be one mysql in inventory_file, please check"
-  failed_when: true
-  when: "'mysql' not in groups or groups['mysql'] | length != 1"
-
-- name: message
-  debug:
-    msg: "mysql must be the same with master in inventory_file, please check"
-  failed_when: true
-  when: groups['mysql'] != groups['master']
-
-- name: message
-  debug:
     msg: "no mysql password is set, please check"
+  failed_when: true
   when: MYSQL_PASSWORD | length == 0
-  failed_when: MYSQL_PASSWORD | length == 0
 
 - name: create deploy directory on host
   file:
@@ -36,17 +24,18 @@
     - Dockerfile
     - my.cnf
 
-- name: build new docker image
-  shell: docker build {{ MYSQL_YAML_DIR }} -t mysql-dl:8.0.26
-
-- name: create directory on host
-  file:
-    path: "{{ item }}"
-    state: directory
-    mode: 0750
-  with_items:
-    - "{{ data_path }}"
-    - /var/log/atlas_dls/mysql
+- name: build and push mysql docker image
+  shell: |
+    # docker build {{ MYSQL_YAML_DIR }} -t mysql-dl:8.0.26
+    docker build {{ MYSQL_YAML_DIR }} -t {{REPO_URL}}mysql/mysql-dl_{{ARCH}}:8.0.26
+    docker push {{REPO_URL}}mysql/mysql-dl_{{ARCH}}:8.0.26
+    docker manifest create {{REPO_URL}}mysql/mysql-dl:8.0.26 \
+    {{REPO_URL}}mysql/mysql-dl_{{ARCH}}:8.0.26 -a
+    docker manifest annotate {{REPO_URL}}mysql/mysql-dl:8.0.26 \
+    {{REPO_URL}}mysql/mysql-dl_{{ARCH}}:8.0.26 --os linux --arch {{ARCH}}
+    docker manifest push {{REPO_URL}}mysql/mysql-dl:8.0.26
+  environment:
+    DOCKER_CLI_EXPERIMENTAL: enabled
 
 - name: check namespace
   shell: "kubectl get namespace | awk '$1 ~ /^{{ k8s_namespace }}$/ {print $1}'"
@@ -100,6 +89,7 @@
     - { "user":"image_user",   "dbname":"image_manager",   "service": "image-manager"}
     - { "user":"data_user",    "dbname":"data_manager",    "service": "data-manager"}
     - { "user":"cluster_user", "dbname":"cluster_manager", "service": "cluster-manager"}
+    - { "user":"alarm_user",   "dbname":"alarm_manager",   "service": "alarm-manager"}
 
 - name: create yamls
   template:
@@ -107,8 +97,6 @@
     dest: "{{ MYSQL_YAML_DIR }}/{{ item }}"
     mode: 0640
   with_items:
-    - mysql-pv.yaml
-    - mysql-pvc.yaml
     - mysql-deployment.yaml
 
 - name: deploy mysql
@@ -119,6 +107,4 @@
     HTTP_PROXY: ""
     HTTPS_PROXY: ""
   with_items:
-    - mysql-pv.yaml
-    - mysql-pvc.yaml
     - mysql-deployment.yaml
