支持商用基础组件和toolbox安装

--- a/playbooks/roles/mindx.dl.install/tasks/main.yaml
+++ b/playbooks/roles/mindx.dl.install/tasks/main.yaml
@@ -45,7 +45,7 @@
     mode: 0700
 
 - name: install MindX DL
-  shell: "/usr/bin/dlinstall --harbor {{ HARBOR_IP }} --harbor-port {{ HARBOR_HTTPS_PORT }} {{ item }}"
+  shell: "/usr/bin/dlinstall --harbor-ip {{ HARBOR_IP }} --harbor-port {{ HARBOR_HTTPS_PORT }} {{ item }}"
   ignore_errors: true
   when: "ansible_architecture in item"
   with_fileglob:
